...
          {!isIdentified ? (
            <Button testID="identify-button" title="Identify" onPress={handleIdentify} />
          ) : (
            <Button testID="reset-button" title="Reset" onPress={handleReset} />
          )}
          <Button
            testID="navigation-test-button"
            title="Navigation Test"
            onPress={() => {
              setShowNavigationTest(true)
            }}
          />
          <Button
            testID="live-updates-test-button"
            title="Live Updates Test"
            onPress={() => {
              setShowLiveUpdatesTest(true)
            }}
          />
        </View>
...
