...
                      'NavigationViewOne'
                    >
                  }) =>
                    renderNavigationView({
                      testIdSuffix: 'one',
                      nextButtonTitle: 'Go to View Two',
                      nextButtonTestId: 'go-to-view-two-button',
                      onNavigateNext: () => {
                        navigation.navigate('NavigationViewTwo')
                      },
                    })
                  }
                </Stack.Screen>
...
